scss/components/search/_facet.scss
prm-facet {
  .sidebar-inner-wrapper {
    padding-right: 0.25em;
  }
}

prm-facet-exact,
prm-facet-range {
  h3.section-title-header {
    margin-right: 0;
  }

  & > div {
    background-color: #fff;
  }

  div.section-content {
    padding-top: 0.5em;
    padding-bottom: 0.5em;

    button.button-exclude::before {
      background-color: transparent !important;
    }
  }

  button.section-title {
    background-color: #dbdbdb;
    margin-bottom: 0;
    border-radius: 0;
    box-shadow: 1px;

    &:hover,
    &:focus {
      background-color: #dbdbdb !important;
    }

    & > div {
      justify-content: space-between;
    }
  }

  div.md-chips,
  div.expand-section-button,
  .md-chip > .md-range-content {
    padding-left: 1em;
  }
}

// Don't show the exclude facet icons in the medium breakpoint
@media (min-width:960px) {
  .available-facets .section-content .md-chips .md-chip .button-exclude {
    opacity: 0 !important;
  }
}

